[package]
name = "ssh-keys"
description = """
    Parser of ssh public and private keys
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["ssh", "keys", "parser"]
categories = ["parser-implementations"]
homepage = "http://github.com/tailhook/ssh-keys"
documentation = "http://docs.rs/ssh-keys"
version = "0.1.3"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.1.0"
base64 = "0.9.0"
byteorder = "1.2.2"
